fixed title alignment activity viewer

--- a/app/scss/_workoutBarView.scss
+++ b/app/scss/_workoutBarView.scss
@@ -112,7 +112,7 @@
         .title
         {
             clear: left;
-            padding-left: 5px;
+            padding-left: 11px;
             @include inputs(10px, 20px, $fontSizeLarge, $fontFamilyRegular);
             span.workoutTitleText
             {
